hphp/test/slow/coeffects_gating/test_bad.php.expectf
Fatal error: Cannot use unstable feature: `coeffects_provisional` in %s on line 4
